--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function draw(e){
   ctx.strokeStyle = `hsl(${hue},100%,50%)`;
   ctx.beginPath();
   ctx.moveTo(lastX,lastY);
-  ctx.lineTo(e.offsetX,e.offsetY);
+  ctx.lineTo(x,y);
   ctx.stroke();
   [lastX,lastY] = [e.offsetX,e.offsetY];
   hue++;
